Firmware Update cloud APIs refactored
