# apps/cloud-backend/fusion-core/internal/constants/endpoints.go
@@ -66,18 +66,11 @@ const (
 	// EndpointOrganizationUsers is the endpoint for organization user operations.
 	EndpointOrganizationUsers = "/users"
 
-	EndpointFirmware                 = "/firmware"
-	EndpointFirmwareBundles          = "/bundles"
-	EndpointFirmwareList             = "/releases"
-	EndpointFirmwareInitiateRelease  = "/releases"
-	EndpointApproveBundle            = "/bundles/:bundleID/approve"
-	EndpointFirmwareUpdateCheck      = "/updates/check"
-	EndpointFirmwareDownload         = "/updates/:platform/:version/download"
-	EndpointFirmwareUpdateLog        = "/updates/log"
-	EndpointFirmwareDeploy           = "/releases/:releaseID/deploy"
-	EndpointFirmwareReleases         = "/firmware/releases"
-	EndpointFirmwareReleaseAvailable = "/firmware/releases/:releaseID/mark-available"
-	EndpointFirmwareReleaseDeploy    = "/firmware/releases/:releaseID/deploy"
-	EndpointBundleDownload           = "/firmware/bundles/:bundleId/download"
-	EndpointLogBundleUpdateStatus    = "/firmware/bundles/updates/status"
+	EndpointFirmware              = "/firmware"
+	EndpointFirmwareBundles       = "/bundles"
+	EndpointFirmwareList          = "/bundles"
+	EndpointApproveBundle         = "/bundles/:bundleID/approve"
+	EndpointFirmwareUpdateCheck   = "/updates/check"
+	EndpointBundleDownload        = "/bundles/:bundleId/download"
+	EndpointLogBundleUpdateStatus = "/bundles/updates/status"
 )
